Added handleDrop function making the tasks change status upon dropping into the columns and added a color key in the header. Also added functionality to the README.md.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,10 @@ body {
 .task-card:hover {
   cursor: grab;
 }
+/* Style for alert box of colors */
+.alert{
+  display: flex;
+}
+.alert p{
+  width: 500px;
+}
